feat: find all menu unscoped endpoint
